samples/_failures_safe/1761367738_fc96df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfeaaa8c.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_cfeaaa8c.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
